# grimarz

./: .gitignore  CMakeLists.txt
cmake/: FindLZ4.cmake
grimarz/: main.cpp
